add css styling

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>this is a h1</h1>
+  <h2>this is a h2</h2>
+  <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</strong>
+    <br>
+    <em>Amet, corporis? Cupiditate dolores reprehenderit maiores</em>
+    <br>
+     <ins>temporibus vel? Perspiciatis unde corrupti facilis illo</ins>
+     <br>
+    doloremque, voluptate et, nihil, quas ipsum laborum itaque nemo?</p>  
+</body>
+</html>
